--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
         <link rel="stylesheet" type="text/css" href="css/estilos.css">
     </head>
     <body>
-
+        <p>Esto es un parrafo</p>
     </body>
 </html>
